# investigate-emil-crash

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: c-cpp.yml
source/: CMakeLists.txt
source/based-on-emil/: CMakeLists.txt  main.cpp
